...
) {
  val extColors = LocalCherishExtendedColors.current

  Column(
    modifier = modifier
      .fillMaxWidth()
      .testTag("create_step_4_container"),
    horizontalAlignment = Alignment.CenterHorizontally
  ) {
    // Badge
    Box(
      modifier = Modifier
        .clip(RoundedCornerShape(16.dp))
...
